--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -5,15 +5,13 @@
     <string name="action_settings">Settings</string>
     <string name="COL2">Cotton Building Level 2</string>
     <string name="COL3">Cotton Building Level 3</string>
-    <string name="chooselevel">Choose a level: </string>
-    <string name="choosefile">Choose a file: </string>
-    <string name="browse">Browse..</string>
-    <string name="locate">LOCATE</string>
+    <string name="chooselevel">1. Choose a level: </string>
+    <string name="choosefile">2. Choose a file: </string>
+    <string name="browse">Browse for access points file to load current location..</string>
 
     <color name="black">#000000</color>
     <color name="white">#FFFFFF</color>
 
-    <string name="title_activity_file_chooser">Choose a file with building Access Points</string>
-    <string name="hello_world">Hello world!</string>
+    <string name="title_activity_file_chooser">Choose a file for location</string>
 
 </resources>
