--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -13,5 +13,7 @@
     <color name="white">#FFFFFF</color>
 
     <string name="title_activity_file_chooser">Choose a file for location</string>
+    <string name="title_activity_print_xml">Access Points Loaded</string>
+    <string name="hello_world">Hello world!</string>
 
 </resources>
