--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -15,5 +15,6 @@
     <string name="title_activity_file_chooser">Choose a file for location</string>
     <string name="title_activity_print_xml">Access Points Detected</string>
     <string name="getLocation">Get Location</string>
+    <string name="title_activity_display_coordinates">X and Y Coordinates</string>
 
 </resources>
